upload customer csv cide

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.data.mongodb.uri=mongodb+srv://junaidp:sA1azNacv8vnrgKJ@cluster0-wxkrw.mongodb.net/analytics?retryWrites=true&w=majority
+spring.data.mongodb.database=analytics
+spring.servlet.multipart.max-file-size =-1
+spring.servlet.multipart.max-request-size =-1
+server.port=8086
 
